# sudoku-race

./: .coverage  .coveragerc  .dockerignore  .gitignore  .tool-versions  CODEOWNERS  Dockerfile  Makefile  README.md  Tiltfile  main.tf  outputs.tf  pyproject.toml  variables.tf
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: push.yml  semantic-pr.yml
backend/: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  build.gradle  nosetests.xml  runserver.py  settings.gradle
backend/sudokurace/: __init__.py  app.py  core.py
backend/sudokurace/dtos/: move.py
backend/sudokurace/models/: game.py  move.py  state.py
backend/sudokurace/views/: __init__.py  game.py  index.py
backend/tests/: app_tests.py  core_tests.py  test_app.py  test_attrs.py  test_core.py  test_game_model.py  test_move_dtos.py  test_state.py  test_views.py
backend/tools/: static_analysis.sh
frontend/: .eslintrc.yml  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx  Board.css  Board.jsx  Cell.jsx  InputCell.jsx  NoInputCell.jsx  Row.jsx  index.css
migrations/: Dockerfile.migrations  entrypoint.sh
operations/: .tool-versions  Pulumi.application.yaml  Pulumi.cert-manager.yaml  Pulumi.cockroachdb.yaml  Pulumi.core.yaml  Pulumi.istio.yaml  Pulumi.metrics-server.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
operations/local_only/: deployment.yaml  job.yaml
sudokurace/: entrypoint.py
sudokurace/server/: application.py
tests/: test_sudokurace.py
web/: .dockerignore  Dockerfile
(+34 files in other folders)
