[tool.poetry]
name = "sudokurace"
version = "0.0.0"
description = ""
authors = ["Aaron <AaronBatilo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.1"
uvicorn = "^0.13.1"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^20.8b1"
pytest-cov = "^2.10.1"
coverage = "^5.3"
requests = "^2.25.1"

[tool.poetry.scripts]
entrypoint = 'sudokurace:entrypoint.main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
